--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fs-extra": "^5.0.0",
     "geoip-lite": "^1.2.1",
     "homedir": "^0.6.0",
+    "ng-infinite-scroll": "^1.3.0",
     "socket.io": "^2.0.4"
   }
 }
