--- a/package.json
+++ b/package.json
@@ -27,13 +27,28 @@
     "url": "https://github.com/abrahamcarvalhoo/slim-rat/issues"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "clean": "rm -rf ./dist",
+    "pack": "npm run pack:linux32 && npm run pack:linux64  && npm run pack:win32 && npm run pack:win64",
+    "pack:linux32": "electron-packager . $npm_package_name --out=dist/ --platform=linux --arch=ia32 --overwrite",
+    "pack:linux64": "electron-packager . $npm_package_name --out=dist/ --platform=linux --arch=x64 --asar=true --overwrite",
+    "pack:win32": "electron-packager . $npm_package_name --out=dist/ --platform=win32 --arch=ia32 --icon=assets/images/icons/icon.ico --overwrite",
+    "pack:win64": "electron-packager . $npm_package_name --out=dist/ --platform=win32 --arch=x64 --icon=assets/images/icons/icon.ico --overwrite",
+    "build": "npm run build:linux && npm run build:win",
+    "build:linux": "npm run build:linux32 && npm run build:linux64",
+    "build:linux32": "build --linux deb --ia32",
+    "build:linux64": "build --linux deb --x64",
+    "build:win": "npm run build:win32 && npm run build:win64",
+    "build:win32": "build --win --ia32",
+    "build:win64": "build --win --x64"
   },
   "engines": {
     "node": ">=0.12"
   },
   "devDependencies": {
-    "electron": "^1.7.10"
+    "asar": "^0.14.0",
+    "electron": "^1.7.10",
+    "electron-packager": "^10.1.1"
   },
   "dependencies": {
     "angular": "^1.6.8",
