--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
   },
   "devDependencies": {
     "electron": "^1.7.10",
-    "electron-builder": "^19.52.1"
+    "electron-builder": "^19.52.1",
+    "electron-packager": "^10.1.1"
   },
   "dependencies": {
     "angular": "^1.6.8",
